Bug 1322455 - When cloning an <input>, avoid re-initializing checkedness in DoneCreatingElement. r=smaug.

MozReview-Commit-ID: wlbZ7grT2M